[CSL-2292] Add transaction smoke testing commands to auxx

--- a/auxx/cardano-sl-auxx.cabal
+++ b/auxx/cardano-sl-auxx.cabal
@@ -87,6 +87,7 @@ library
                      , text-format
                      , time-units
                      , transformers
+                     , vector
                      , universum >= 0.1.11
                      , unordered-containers
 
