--- a/wallet-new/cardano-sl-wallet-new.cabal
+++ b/wallet-new/cardano-sl-wallet-new.cabal
@@ -145,6 +145,7 @@ executable cardano-node-new
                      , aeson-pretty
                      , bytestring
                      , cardano-sl
+                     , cardano-sl-block
                      , cardano-sl-client
                      , cardano-sl-core
                      , cardano-sl-crypto
