--- a/node/cardano-sl-node.cabal
+++ b/node/cardano-sl-node.cabal
@@ -16,6 +16,7 @@ executable cardano-node-simple
   hs-source-dirs:      .
   main-is:             Main.hs
   build-depends:       base
+                     , cardano-sl-block
                      , cardano-sl-core
                      , cardano-sl-infra
                      , cardano-sl-update
