--- a/wallet/cardano-sl-wallet.cabal
+++ b/wallet/cardano-sl-wallet.cabal
@@ -206,6 +206,7 @@ executable cardano-node
   build-depends:
                         base
                       , cardano-sl
+                      , cardano-sl-block
                       , cardano-sl-core
                       , cardano-sl-infra
                       , cardano-sl-ssc
